# meseleekonomiTranscribe

./: .gitignore  CLAUDE.md  README.md  app.py  audio_downloader.py  interface.py  main.py  merged_transcript.json  meseleekonomiTranscribe.py  pyproject.toml  transcription.py  utils.py
.github/workflows/: claude.yml
