[tool.poetry]
name = "meseleekonomitranscribe"
version = "0.1.0"
description = ""
authors = ["Mehmet Akgunay <makgunay@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlx-whisper = "^0.1.0"
yt-dlp = "^2024.8.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
