[tool.poetry]
name = "meseleekonomitranscribe"
version = "0.1.0"
description = ""
authors = ["Mehmet Akgunay <makgunay@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
mlx-whisper = "^0.4.2"
yt-dlp = "^2024.8.6"
python-dotenv = "^1.1.1"
streamlit = "^1.48.0"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
